# uncertaintea

./: .JuliaFormatter.toml  .git-blame-ignore-revs  .gitignore  AGENTS.md  Project.toml  README.md
.github/workflows/: ci.yml
bench/: nuts_masked_bench.jl  sbc_validation.jl
bench/crossppl/: .gitignore  README.md  generate_data.jl  run_all.sh
bench/crossppl/python/: analyze.py  common.py  pyproject.toml  run_numpyro.py  run_stan.py
bench/crossppl/python/stan/: eight_schools_centered.stan  eight_schools_noncentered.stan  gauss.stan  logistic.stan
docs/: README.md  architecture.md  batched-inference.md  benchmarks.md  constraint-driven-conditioning.md  device-backend.md  device-vector-latents.md  discrete-enumeration.md  dsl.md  gpu-native-nuts.md  mh-within-gibbs.md  noncentered-reparam.md  research.md  vector-backend-lowering.md
ext/: UncertainTeaMCMCChainsExt.jl  UncertainTeaMetalExt.jl
src/: UncertainTea.jl  backend.jl  batched.jl  choicemaps.jl  core.jl  device.jl  distributions.jl  evaluator.jl  evaluator_pointwise.jl  frontend.jl  gpu_backend.jl  inference.jl  ir.jl  parameters.jl  precompile.jl  runtime.jl
src/backend/: emitter.jl  expr_eval.jl  lowering.jl  lowering_extensions.jl  scoring.jl  scoring_extensions.jl  scoring_vectors.jl
src/batched/: api.jl  manual_gradient.jl  manual_gradient_scoring.jl  manual_gradient_scoring_extensions.jl  workspace.jl
src/device/: advi_kernels.jl  api.jl  dual.jl  gradient_kernel.jl  hmc_kernels.jl  logjoint_kernel.jl  math.jl  nuts_kernels.jl  plan.jl  staging.jl  workspace.jl
test/: runtests.jl
(+213 files in other folders)
